detailLedgerType api